--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,12 @@ main{
         width: 100%;
     }
 
+    .logo{
+        width: 130px;
+        height: 56px;
+        margin: 0px;
+    }
+
     main{
         display: block;
         margin: 0 80px;
@@ -160,5 +166,85 @@ main{
         width: 570px;
         height: 67px;
         margin: 0px 20px 20px;
+    }
+}
+
+/*
+##################################################
+            Pantalla Celular
+##################################################
+*/
+
+@media screen and (max-width: 375px){
+    main{
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+
+    .logo{
+        width: 100px;
+        height: 42px;
+        margin: 0px;
+    }
+
+    .msn{
+        width: 100%;
+        margin-top: 50px;
+    }
+
+    .warning{
+        display: inline-block;
+        color: #495057;
+        font-size: 15px;
+    }
+
+    .btn{
+        display: block;
+        margin-top: 18px;
+    }
+
+    .btn-encriptar{
+        background-color: #0A3871;
+        border: 1px solid #0A3871;
+        border-radius: 24px;
+        color: white;
+        cursor: pointer;
+        height: 67px;
+        width: 328px;
+    }
+
+    .btn-desencriptar{
+        background: #D8DFE8;
+        border: 1px solid #0A3871;
+        border-radius: 24px;
+        color: #0A3871;
+        cursor: pointer;
+        height: 67px;
+        margin-left: 0px;
+        margin-top: 25px;
+        width: 328px;
+    }
+
+    .show-msn{
+        background: white;
+        border: none;
+        border-radius: 24px;
+        color: #0A3871;
+        position: relative;
+        margin: 50px 0px 0 0;
+        padding-left: 0px;
+        width: 100%;
+        bottom: 0;
+    }
+
+    .btn-copy{
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: white;
+        font-size: 16px;
+        width: 90%;
+        margin: 0px 20px 20px 0px;
     }
 }
