--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,14 @@
 }
 
 .logo{
-    padding-top: 10px;
+    padding-top: 0px;
     margin-left: 10px;
     width: 10%;
 }
 
 main{
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
     margin-left: 80px;
 }
 
@@ -23,6 +23,8 @@ main{
     color: #0A3871;
     margin-top: 90px;
     text-transform: lowercase;
+    margin-top: 25px;
+    height: 400px;
 }
 
 ::placeholder{ color: #0A3871; }
@@ -34,11 +36,13 @@ main{
     display: inline-block;
     color: #495057;
     font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .btn{
     display: flex;
-    margin-top: 18px;
+    margin-top: 0px;
 }
 
 .btn-encriptar{
